--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,21 @@
 {{#each articles}}
-    <div class="col s12 m7">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="https://lorempixel.com/100/190/nature/6">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <h5>{{title}}</h5>
-                    <p>{{summary}}</p>
-                    <p>{{readTime}}</p>
-                </div>
-                <div class="card-action">
-                    <p>read full article<a href="{{link}}">Here</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--<div class="col s12 m7">-->
+        <!--<div class="card horizontal">-->
+            <!--<div class="card-image">-->
+                <!--<img src="https://lorempixel.com/100/190/nature/6">-->
+            <!--</div>-->
+            <!--<div class="card-stacked">-->
+                <!--<div class="card-content">-->
+                    <!--<h5>{{title}}</h5>-->
+                    <!--<p>{{summary}}</p>-->
+                    <!--<p>{{readTime}}</p>-->
+                <!--</div>-->
+                <!--<div class="card-action">-->
+                    <!--<p>read full article<a href="{{link}}">Here</a></p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 
     <div class="col s12 m7">
@@ -27,17 +27,17 @@
                 <div class="card-content">
                     <h5>{{title}}</h5>
                     <p>{{summary}}</p>
-                    <p>{{readTime}}</p>
+                    <p>{{updated}}</p>
                 </div>
                 <div class="card-action">
                     <a href="#">This is a link</a>
-                    <!--Collapsible-->
+                    <!--===============================Collapsible===================================-->
                     <ul class="collapsible" data-collapsible="accordion">
                         <!--Comment-->
                         <li>
                             <div class="collapsible-header"><i class="material-icons">edit</i>Comment</div>
                             <div class="collapsible-body"><span>
-                                 <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post" style="background-color: white;">
+                                 <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post">
 
           <!-- Author Name Input -->
           <div class="row">
