--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,106 +1,103 @@
-
 {{#each articles}}
-    <ul class="collapsible" data-collapsible="accordion">
 
-        <!-- Article Drop Down -->
-        <li>
-            <div style="background-color: white;" class="collapsible-header grey lighten-2">
-                <i class="material-icons">language</i> <b>{{updated}}</b>
-                <div style="clear: left; line-height: 110%; padding-bottom: 10px;"><b>{{title}}</b></div>
+    <div class="col s12 m7">
+        <div class="card horizontal">
+            <!--TODO select image-->
+            <div class="card-image full-image">
+                <img src="https://lorempixel.com/100/190/nature/6">
             </div>
-            <div class="collapsible-body" style="background-color: white;">
-                <p>
-                    {{summary}}
+            <div class="card-stacked">
+                <div class="card-content">
+                    <h5>{{title}}</h5>
+                    <p>{{summary}}</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <!--===============================Collapsible===================================-->
+                    <ul class="collapsible" data-collapsible="accordion">
+                        <!--Comment-->
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">edit</i>Comment</div>
+                            <div class="collapsible-body"><span>
+                                 <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post">
 
-                    <br><br>
-
-                    <i>Please read the full article <a href="{{link}}" target="_new">here</a>.</i>
-                </p>
-
+          <!-- Author Name Input -->
+          <div class="row">
+            <div class="input-field col s2"></div>
+            <div class="input-field col s8">
+              <input id="author_name" name="name" type="text" class="validate">
+              <label for="author_name">Your Name:</label>
             </div>
-        </li>
+          </div>
 
-
-        <!-- Add Comments Drop Down -->
-        <li>
-            <div class="collapsible-header"><i class="material-icons">comment</i>Add a Comment</div>
-            <div class="collapsible-body" style="background-color: white;">
-
-                <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post" style="background-color: white;">
-
-                    <!-- Author Name Input -->
-                    <div class="row">
-                        <div class="input-field col s2"></div>
-                        <div class="input-field col s8">
-                            <input id="author_name" name="name" type="text" class="validate">
-                            <label for="author_name">Your Name:</label>
-                        </div>
-                    </div>
-
-                    <!-- Comment Input -->
-                    <div class="row">
-                        <div class="input-field col s2"></div>
-                        <div class="input-field col s8">
-                            <textarea id="comment_box" name="comment" class="materialize-textarea"></textarea>
-                            <label for="comment_box">Your Reaction:</label>
-                        </div>
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="row">
-                        <div class="input-field col s2"></div>
-                        <div class="input-field col s8">
-                            <center><input class="btn add-comment-button" data-id="{{_id}}" type="submit" value="Submit"></center>
-                        </div>
-                    </div>
-
-                </form>
-
+                                     <!-- Comment Input -->
+          <div class="row">
+            <div class="input-field col s2"></div>
+            <div class="input-field col s8">
+              <textarea id="comment_box" name="comment" class="materialize-textarea"></textarea>
+              <label for="comment_box">Your Comment:</label>
             </div>
-        </li>
+          </div>
 
+                                     <!-- Submit Button -->
+            <div class="row">
+              <div class="input-field col s2"></div>
+              <div class="input-field col s8">
+              <center><input class="btn add-comment-button blue-grey darken-4" data-id="{{_id}}" type="submit" value="Submit"></center>
+              </div>
+            </div>
 
-        <!-- View Comments Drop Down -->
-        <li>
-            <div class="collapsible-header"><i class="material-icons">thumbs_up_down</i>View Comments</div>
-            <div class="collapsible-body" style="background-color: white;">
+        </form>
+                            </span></div>
+                        </li>
 
-                {{!-- Check if the article has comments --}}
-                {{#if comments}}
+                        <!--Read Comments-->
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">short_text</i>Read Comments</div>
+                            <div class="collapsible-body"><span>
+                                 {{!-- Check if the article has comments --}}
+                                {{#if comments}}
 
-                {{!-- Article has comments so iterate over them  --}}
-                    <ul class="collection">
-                        {{#each comments}}
+                                {{!-- Article has comments so iterate over them  --}}
+                                    <ul class="collection">
+                                        {{#each comments}}
 
-                            <li class="collection-item">
+                                            <li class="collection-item">
 
-                                {{!-- Add Author Name --}}
-                                <b>{{author}}</b>
+                {{!-- Add Author Name --}}
+                                                <b>{{author}}</b>
 
-                                {{!-- Add a Delete Button --}}
-                                <span class="badge">
+                                                {{!-- Add a Delete Button --}}
+                                                <span class="badge">
                   <form id="form-delete-{{_id}}" action="remove/comment/{{_id}}" method="post">
                     <input class="btn-small delete-comment-button" data-id="{{_id}}" type="submit" value="Delete" style="color: white; background-color: red; border-color: red;">
                   </form>
                 </span>
 
-                                <br>
+                <br>
 
-                                {{!-- Add the Content of the Comment --}}
-                                {{content}}
+                                                {{!-- Add the Content of the Comment --}}
+                                                {{content}}
 
-                            </li>
-                        {{/each}}
+              </li>
+                                        {{/each}}
+                                    </ul>
+
+                                {{!-- No comments, so display message --}}
+                                {{else}}
+                                    <p>No Comments Yet :( </p>
+                                {{/if}}
+
+                            </span></div>
+                        </li>
                     </ul>
-
-                {{!-- No comments, so display message --}}
-                {{else}}
-                    <p>No Comments Yet :( </p>
-                {{/if}}
-
-
+                    <!--<button class="btn waves-effect waves-light blue-grey darken-4 right">Comment</button>-->
+                    <!--<button class="btn waves-effect waves-light blue-grey darken-4 right">Read Comments</button>-->
+                </div>
             </div>
-        </li>
+        </div>
+    </div>
 
-    </ul>
+
+
 {{/each}}
