Various HTML fixes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">GitHub Repo</a></li>
             <li><a href="http://brookleewilson.com/" target="_blank">Portfolio</a></li>
-            <li><a href="https://www.webpagefx.com/blog/web-design/" target="_blank">WebpageFX</a></li>
+            <li><a href="https://www.theonion.com/" target="_blank">theonion</a></li>
         </ul>
     </div>
 </nav>
@@ -28,7 +28,7 @@
 <div class="row">
     <div class="col s12">
         <h2 class="text-center cursive">Welcome to WebScrapper!</h2>
-        <h4 class="text-center">get all the latest updates to web design</h4>
+        <h4 class="text-center">get all the latest "news"</h4>
         <p class="text-center">Read articles, add comments and read comments</p>
     </div>
 </div>
@@ -66,8 +66,8 @@
     <div class="footer-copyright">
         <div class="container">
             © 2017 Copyright Brooklee Wilson
-            all articles scraped from webpageFX.com
-            <a class="grey-text text-lighten-4 right" href="#!">webpageFX.com</a>
+            all articles scraped from theonion.com
+            <a class="grey-text text-lighten-4 right" href="#!">theonion.com</a>
         </div>
     </div>
 </footer>
