--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,103 +1,108 @@
+{{!-- Templating for all Articles  --}}
+
+{{!-- Iterate Over all the articles --}}
 {{#each articles}}
+    <ul class="collapsible" data-collapsible="accordion">
 
-    <div class="col s12 m7">
-        <div class="card horizontal">
-            <!--TODO select image-->
-            <div class="card-image full-image">
-                <img src="https://lorempixel.com/100/190/nature/6">
+        <!-- Article Drop Down -->
+        <li>
+            <div style="background-color: white;" class="collapsible-header grey lighten-2">
+                <i class="material-icons">language</i> <b>{{updated}}</b>
+                <div style="clear: left; line-height: 110%; padding-bottom: 10px;"><b>{{title}}</b></div>
             </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <h5>{{title}}</h5>
-                    <p>{{summary}}</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                    <!--===============================Collapsible===================================-->
-                    <ul class="collapsible" data-collapsible="accordion">
-                        <!--Comment-->
-                        <li>
-                            <div class="collapsible-header"><i class="material-icons">edit</i>Comment</div>
-                            <div class="collapsible-body"><span>
-                                 <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post">
+            <div class="collapsible-body" style="background-color: white;">
+                <p>
+                    {{summary}}
 
-          <!-- Author Name Input -->
-          <div class="row">
-            <div class="input-field col s2"></div>
-            <div class="input-field col s8">
-              <input id="author_name" name="name" type="text" class="validate">
-              <label for="author_name">Your Name:</label>
+                    <br><br>
+
+                    <i>Please read the full article <a href="{{link}}" target="_new">here</a>.</i>
+                </p>
+
             </div>
-          </div>
+        </li>
 
-                                     <!-- Comment Input -->
-          <div class="row">
-            <div class="input-field col s2"></div>
-            <div class="input-field col s8">
-              <textarea id="comment_box" name="comment" class="materialize-textarea"></textarea>
-              <label for="comment_box">Your Comment:</label>
+
+        <!-- Add Comments Drop Down -->
+        <li>
+            <div class="collapsible-header"><i class="material-icons">comment</i>Add a Comment</div>
+            <div class="collapsible-body" style="background-color: white;">
+
+                <form id="form-add-{{_id}}" action="add/comment/{{_id}}" method="post" style="background-color: white;">
+
+                    <!-- Author Name Input -->
+                    <div class="row">
+                        <div class="input-field col s2"></div>
+                        <div class="input-field col s8">
+                            <input id="author_name" name="name" type="text" class="validate">
+                            <label for="author_name">Your Name:</label>
+                        </div>
+                    </div>
+
+                    <!-- Comment Input -->
+                    <div class="row">
+                        <div class="input-field col s2"></div>
+                        <div class="input-field col s8">
+                            <textarea id="comment_box" name="comment" class="materialize-textarea"></textarea>
+                            <label for="comment_box">Your Reaction:</label>
+                        </div>
+                    </div>
+
+                    <!-- Submit Button -->
+                    <div class="row">
+                        <div class="input-field col s2"></div>
+                        <div class="input-field col s8">
+                            <center><input class="btn add-comment-button" data-id="{{_id}}" type="submit" value="Submit"></center>
+                        </div>
+                    </div>
+
+                </form>
+
             </div>
-          </div>
+        </li>
 
-                                     <!-- Submit Button -->
-            <div class="row">
-              <div class="input-field col s2"></div>
-              <div class="input-field col s8">
-              <center><input class="btn add-comment-button blue-grey darken-4" data-id="{{_id}}" type="submit" value="Submit"></center>
-              </div>
-            </div>
 
-        </form>
-                            </span></div>
-                        </li>
+        <!-- View Comments Drop Down -->
+        <li>
+            <div class="collapsible-header"><i class="material-icons">thumbs_up_down</i>View Comments</div>
+            <div class="collapsible-body" style="background-color: white;">
 
-                        <!--Read Comments-->
-                        <li>
-                            <div class="collapsible-header"><i class="material-icons">short_text</i>Read Comments</div>
-                            <div class="collapsible-body"><span>
-                                 {{!-- Check if the article has comments --}}
-                                {{#if comments}}
+                {{!-- Check if the article has comments --}}
+                {{#if comments}}
 
-                                {{!-- Article has comments so iterate over them  --}}
-                                    <ul class="collection">
-                                        {{#each comments}}
+                {{!-- Article has comments so iterate over them  --}}
+                    <ul class="collection">
+                        {{#each comments}}
 
-                                            <li class="collection-item">
+                            <li class="collection-item">
 
-                {{!-- Add Author Name --}}
-                                                <b>{{author}}</b>
+                                {{!-- Add Author Name --}}
+                                <b>{{author}}</b>
 
-                                                {{!-- Add a Delete Button --}}
-                                                <span class="badge">
+                                {{!-- Add a Delete Button --}}
+                                <span class="badge">
                   <form id="form-delete-{{_id}}" action="remove/comment/{{_id}}" method="post">
                     <input class="btn-small delete-comment-button" data-id="{{_id}}" type="submit" value="Delete" style="color: white; background-color: red; border-color: red;">
                   </form>
                 </span>
 
-                <br>
+                                <br>
 
-                                                {{!-- Add the Content of the Comment --}}
-                                                {{content}}
+                                {{!-- Add the Content of the Comment --}}
+                                {{content}}
 
-              </li>
-                                        {{/each}}
-                                    </ul>
-
-                                {{!-- No comments, so display message --}}
-                                {{else}}
-                                    <p>No Comments Yet :( </p>
-                                {{/if}}
-
-                            </span></div>
-                        </li>
+                            </li>
+                        {{/each}}
                     </ul>
-                    <!--<button class="btn waves-effect waves-light blue-grey darken-4 right">Comment</button>-->
-                    <!--<button class="btn waves-effect waves-light blue-grey darken-4 right">Read Comments</button>-->
-                </div>
+
+                {{!-- No comments, so display message --}}
+                {{else}}
+                    <p>No Comments Yet :( </p>
+                {{/if}}
+
+
             </div>
-        </div>
-    </div>
+        </li>
 
-
-
+    </ul>
 {{/each}}
