--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
 
                     <br><br>
 
-                    <i>Please read the full article <a href="{{link}}" target="_new">here</a>.</i>
+                    <a href="{{link}}" target="_new">read full article here</a>
                 </p>
 
             </div>
